@@ -1,2 +1,5 @@
 application/x-font-pcf:
-		regex,2: pcf\.gz$
+	regex,2: pcf\.gz$
+
+application/x-font-ttf:
+	ext: ttc TTC
