@@ -1,5 +1,11 @@
 2003-01-09  James Henstridge  <james@daa.com.au>
 
+	* NEWS: add news items.
+
+	* src/fontilus.mime: ttc files are True Types.
+
+	* src/*.c: update copyright messages.
+
 	* fontilus.spec.in: update to include schema and run a
 	postinstallation script to install the schema.
 
